--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -12,3 +12,7 @@
   @include font('Sansation Light Italic', './fonts/Sansation_Light_Italic');
   @include font('Sansation Light', './fonts/Sansation_Light');
   @include font('Sansation', './fonts/Sansation_Regular');
+  @include font('Aovel Light', './fonts/aovel/ASans');
+  @include font('Aovel', './fonts/aovel/ASansreg');
+  @include font('Aovel Bold', './fonts/aovel/ASansBOLD');
+  @include font('Aovel Black', './fonts/aovel/ASansBlack');
