--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -16,3 +16,9 @@
   @include font('Aovel', './fonts/aovel/ASansreg');
   @include font('Aovel Bold', './fonts/aovel/ASansBOLD');
   @include font('Aovel Black', './fonts/aovel/ASansBlack');
+  @include font('SF movie', './fonts/SFMonster/SF');
+  @include font('SF movie bold', './fonts/SFMonster/SF_Bold');
+  @include font('SF movie Condensed', './fonts/SFMonster/SF_Condensed');
+  @include font('SF movie Condensed Bold', './fonts/SFMonster/SF_Condensed_Bold');
+  @include font('SF movie Condensed Bold Oblique', './fonts/SFMonster/SF_Condensed_Bold_Oblique');
+
